--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".MultiPropertyActivity" />
         <activity android:name=".EventActivity" />
         <activity android:name=".BindingAdapterActivity" />
-        <activity android:name=".RvActivity" />
+        <activity android:name=".rv.RvActivity" />
     </application>
 
 </manifest>
