--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url 'https://maven.google.com' }
         jcenter()
     }
 }
