添加PropertyChanged回调的使用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.corffen.mvvmdemo">
+    package="com.corffen.mvvmdemo">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,22 +14,23 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".BasicActivity"/>
-        <activity android:name=".ViewBindingDataActivity"/>
-        <activity android:name=".ViewBindingData2Activity"/>
-        <activity android:name=".ClickActivity"/>
-        <activity android:name=".ClickWithViewModelActivity"/>
-        <activity android:name=".MultiPropertyActivity"/>
-        <activity android:name=".EventActivity"/>
-        <activity android:name=".BindingAdapterActivity"/>
-        <activity android:name=".rv.RvActivity"/>
-        <activity android:name=".livedata.LiveDataActivity"/>
+        <activity android:name=".BasicActivity" />
+        <activity android:name=".ViewBindingDataActivity" />
+        <activity android:name=".ViewBindingData2Activity" />
+        <activity android:name=".ClickActivity" />
+        <activity android:name=".ClickWithViewModelActivity" />
+        <activity android:name=".MultiPropertyActivity" />
+        <activity android:name=".EventActivity" />
+        <activity android:name=".BindingAdapterActivity" />
+        <activity android:name=".rv.RvActivity" />
+        <activity android:name=".livedata.LiveDataActivity" />
+        <activity android:name=".propertychanged.PropertyChangedActivity" />
     </application>
 
 </manifest>
